avfilter/buffersink: don't leak the reallocated channel layouts array

And ensure the last element is the zeroed terminator.

Fixes ticket #11392.

Signed-off-by: James Almer <jamrial@gmail.com>